specs/blueprints/errors/validation/expected_section_got_sections.eno
# Expecting a section but getting two sections

-- input
# section

# section

-- input

-- javascript
enolib.parse(input).section('section');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section');
-- php

-- python
enolib.parse(input).section('section')
-- python

-- ruby
Enolib.parse(input).section('section')
-- ruby

## ValidationError

-- text
Only a single section with the key 'section' was expected.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
 >    3 | # section
      4 | 
-- snippet

selection: [0,0] => [0,9]

# Expecting a section but getting two sections with elements, empty lines and continuations

-- input
> comment
# section

field: value

# section

list:
- item
\ continuation

- item
-- input

-- javascript
enolib.parse(input).section('section');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section');
-- php

-- python
enolib.parse(input).section('section')
-- python

-- ruby
Enolib.parse(input).section('section')
-- ruby

## ValidationError

-- text
Only a single section with the key 'section' was expected.
-- text

-- snippet
   Line | Content
      1 | > comment
 >    2 | # section
 *    3 | 
 *    4 | field: value
      5 | 
 >    6 | # section
 *    7 | 
 *    8 | list:
 *    9 | - item
 *   10 | \ continuation
 *   11 | 
 *   12 | - item
-- snippet

selection: [1,0] => [3,12]
